--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
   GIT_SUBMODULE_STRATEGY: recursive
   HUGO_VERSION: 0.148.0
   NODE_VERSION: 22.x
-  TZ: America/Los_Angeles
+  TZ: America/Recife
 image:
   name: golang:1.24.2-bookworm
 
