--- a/config/production/hugo.yaml
+++ b/config/production/hugo.yaml
@@ -1,7 +1,7 @@
-# services:
-#   googleAnalytics:
-#     id: G-QG2W4EV564
+services:
+  googleAnalytics:
+    id: G-QG2W4EV564
 
-analytics:
-  google:
-    siteVerificationTag: G-QG2W4EV564
+# analytics:
+#   google:
+#     siteVerificationTag: G-QG2W4EV564
