--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,17 @@ variables:
   HUGO_VERSION: 0.148.0
   DART_SASS_VERSION: 1.89.2
   TZ: America/Recife
+stages:
+  - setup
+  - build
+  - compress
+  - deploy
+
 image:
   name: golang:1.24.2-bookworm
 
-pages:
-  stage: deploy
+setup_dependencies:
+  stage: setup
   script:
     # Install brotli
     - apt-get update
@@ -19,19 +25,57 @@ pages:
     - tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
     - cp -r dart-sass/ /usr/local/bin
     - rm -rf dart-sass*
-    - export PATH=/usr/local/bin/dart-sass:$PATH
     # Install Hugo
     - curl -LJO https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
     - apt-get install -y ./hugo_extended_${HUGO_VERSION}_linux-amd64.deb
     - rm hugo_extended_${HUGO_VERSION}_linux-amd64.deb
+  artifacts:
+    paths:
+      - /usr/local/bin/dart-sass
+    expire_in: 1 hour
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+
+build_site:
+  stage: build
+  dependencies:
+    - setup_dependencies
+  script:
+    # Configure environment
+    - export PATH=/usr/local/bin/dart-sass:$PATH
     # Configure Git
     - git config core.quotepath false
     # Build
     # - hugo --gc --minify --baseURL ${CI_PAGES_URL}
     - hugo --gc --minify
+  artifacts:
+    paths:
+      - public
+    expire_in: 1 hour
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+
+compress_assets:
+  stage: compress
+  dependencies:
+    - build_site
+  script:
     # Compress
     - find public -type f -regex '.*\.\(css\|html\|js\|txt\|xml\)$' -exec gzip -f -k {} \;
     - find public -type f -regex '.*\.\(css\|html\|js\|txt\|xml\)$' -exec brotli -f -k {} \;
+  artifacts:
+    paths:
+      - public
+    expire_in: 1 hour
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+
+pages:
+  stage: deploy
+  dependencies:
+    - compress_assets
+  script:
+    - echo "Deploying to GitLab Pages..."
   artifacts:
     paths:
       - public
