fix: update setup_dependencies to install Dart Sass and Hugo in local directory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,21 +17,26 @@ image:
 setup_dependencies:
   stage: setup
   script:
+    # Create local directory for dependencies
+    - mkdir -p ./dependencies/bin
     # Install brotli
     - apt-get update
     - apt-get install -y brotli
     # Install Dart Sass
     - curl -LJO https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
     - tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
-    - cp -r dart-sass/ /usr/local/bin
+    - cp -r dart-sass/* ./dependencies/bin/
     - rm -rf dart-sass*
     # Install Hugo
     - curl -LJO https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
-    - apt-get install -y ./hugo_extended_${HUGO_VERSION}_linux-amd64.deb
-    - rm hugo_extended_${HUGO_VERSION}_linux-amd64.deb
+    - dpkg-deb -x ./hugo_extended_${HUGO_VERSION}_linux-amd64.deb ./hugo_temp
+    - cp ./hugo_temp/usr/local/bin/hugo ./dependencies/bin/
+    - rm -rf hugo_temp hugo_extended_${HUGO_VERSION}_linux-amd64.deb
+    # Make binaries executable
+    - chmod +x ./dependencies/bin/*
   artifacts:
     paths:
-      - /usr/local/bin/dart-sass
+      - dependencies/
     expire_in: 1 hour
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
@@ -41,8 +46,8 @@ build_site:
   dependencies:
     - setup_dependencies
   script:
-    # Configure environment
-    - export PATH=/usr/local/bin/dart-sass:$PATH
+    # Configure environment with shared dependencies
+    - export PATH=$PWD/dependencies/bin:$PATH
     # Configure Git
     - git config core.quotepath false
     # Build
@@ -59,7 +64,10 @@ compress_assets:
   stage: compress
   dependencies:
     - build_site
+    - setup_dependencies
   script:
+    # Configure environment with shared dependencies
+    - export PATH=$PWD/dependencies/bin:$PATH
     # Compress
     - find public -type f -regex '.*\.\(css\|html\|js\|txt\|xml\)$' -exec gzip -f -k {} \;
     - find public -type f -regex '.*\.\(css\|html\|js\|txt\|xml\)$' -exec brotli -f -k {} \;
