--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ build_site:
   artifacts:
     paths:
       - public
-    expire_in: 1 hour
+    expire_in: 20 minutes
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
@@ -90,7 +90,7 @@ compress_assets:
   artifacts:
     paths:
       - public
-    expire_in: 1 hour
+    expire_in: 20 minutes
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
