fix: add taxonomies configuration to hugo.yaml

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,6 +4,9 @@ title: taboza.dev
 theme: ["PaperMod"]
 enableRobotsTXT: true
 
+# Disable taxonomies temporally (categories and tags)
+taxonomies: {}
+
 params:
 
   profileMode:
