--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,19 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  nix-build:
-    name: Nix Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: cachix/install-nix-action@v25
-
-      - name: Build with Nix
-        run: nix build
-
   go-build:
     name: Go Build
     runs-on: ubuntu-latest
@@ -34,3 +21,17 @@ jobs:
 
       - name: Build Go
         run: go build ./...
+
+  nix-build:
+    name: Nix Build
+    runs-on: ubuntu-latest
+    needs: go-build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: cachix/install-nix-action@v25
+
+      - name: Build with Nix
+        run: nix build
