--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,19 +7,6 @@ on:
       - completed
 
 jobs:
-  nix-test:
-    name: Nix Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: cachix/install-nix-action@v25
-
-      - name: Run Nix tests
-        run: nix flake check
-
   go-test:
     name: Go Test
     runs-on: ubuntu-latest
@@ -34,3 +21,17 @@ jobs:
 
       - name: Run Go tests
         run: go test -v ./...
+
+  nix-test:
+    name: Nix Test
+    runs-on: ubuntu-latest
+    needs: go-test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: cachix/install-nix-action@v25
+
+      - name: Run Nix tests
+        run: nix flake check
