--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,22 @@ jobs:
       - name: Build Go
         run: go build ./...
 
+  go-test:
+    name: Go Test
+    runs-on: ubuntu-latest
+    needs: go-build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+
+      - name: Run Go tests
+        run: go test -v ./...
+
   nix-build:
     name: Nix Build
     runs-on: ubuntu-latest
@@ -35,3 +51,17 @@ jobs:
 
       - name: Build with Nix
         run: nix build
+
+  nix-test:
+    name: Nix Test
+    runs-on: ubuntu-latest
+    needs: nix-build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: cachix/install-nix-action@v25
+
+      - name: Run Nix tests
+        run: nix flake check
