--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,61 +7,45 @@ on:
     branches: [main]
 
 jobs:
-  go-build:
+  build:
     name: Go Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checking out code
         uses: actions/checkout@v4
 
-      - name: Set up Go
+      - name: Setting up Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.22'
 
-      - name: Build Go
+      - name: Building with Go
         run: go build ./...
 
-  go-test:
+      - name: Setting up Nix
+        uses: cachix/install-nix-action@v25
+
+      - name: Building with Nix
+        run: nix build
+
+  test:
     name: Go Test
     runs-on: ubuntu-latest
-    needs: go-build
+    needs: build
     steps:
-      - name: Checkout code
+      - name: Checking out code
         uses: actions/checkout@v4
 
-      - name: Set up Go
+      - name: Installing Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.22'
 
-      - name: Run Go tests
+      - name: Running tests with Go
         run: go test -v ./...
 
-  nix-build:
-    name: Nix Build
-    runs-on: ubuntu-latest
-    needs: go-build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Nix
+      - name: Installing Nix
         uses: cachix/install-nix-action@v25
 
-      - name: Build with Nix
+      - name: Running tests with Nix
         run: nix build
-
-  nix-test:
-    name: Nix Test
-    runs-on: ubuntu-latest
-    needs: nix-build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: cachix/install-nix-action@v25
-
-      - name: Run Nix tests
-        run: nix flake check
