--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,13 @@ on:
 
 jobs:
   build:
-    name: Go Build
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checking out code
         uses: actions/checkout@v4
 
-      - name: Setting up Go
+      - name: Installing Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.22'
@@ -22,14 +22,14 @@ jobs:
       - name: Building with Go
         run: go build ./...
 
-      - name: Setting up Nix
+      - name: Installing Nix
         uses: cachix/install-nix-action@v25
 
       - name: Building with Nix
         run: nix build
 
   test:
-    name: Go Test
+    name: Test
     runs-on: ubuntu-latest
     needs: build
     steps:
