--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
-name: Build
+name: Build and Test Workflow
 
 on:
   push:
     branches: [main]
+    tags:
+      - 'v*'
   pull_request:
     branches: [main]
 
@@ -49,3 +51,73 @@ jobs:
 
       - name: Running tests with Nix
         run: nix build
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    if: startsWith(github.ref, 'refs/tags/')
+    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Checking out code
+        uses: actions/checkout@v4
+
+      - name: Installing Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+
+      - name: Set up QEMU (for cross-compilation)
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
+
+      - name: Set up Bash and dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
+      - name: Run cross-platform build script
+        run: |
+          set -euo pipefail
+
+          PLATFORMS=(
+            "linux/amd64" "linux/386" "linux/arm64" "linux/arm"
+            "windows/amd64" "windows/386" "windows/arm64" "windows/arm"
+            "darwin/amd64" "darwin/arm64"
+          )
+          OUTPUT_DIR="output"
+          APP_NAME="making-mirrors"
+
+          mkdir -p "$OUTPUT_DIR"
+
+          map_arch() {
+              case "$1" in
+                  amd64) echo "x86_64" ;;
+                  386) echo "x86" ;;
+                  arm64) echo "arm64" ;;
+                  arm) echo "arm32" ;;
+                  *) echo "$1" ;;
+              esac
+          }
+
+          for PLATFORM in "${PLATFORMS[@]}"; do
+              IFS="/" read -r GOOS GOARCH <<< "$PLATFORM"
+              EXT=""
+              if [ "$GOOS" = "windows" ]; then
+                  EXT=".exe"
+              fi
+              ARCH_NAME=$(map_arch "$GOARCH")
+              OUTPUT_NAME="$OUTPUT_DIR/${APP_NAME}-${GOOS}-${ARCH_NAME}${EXT}"
+              echo "Building for $GOOS/$GOARCH -> $OUTPUT_NAME"
+              env GOOS="$GOOS" GOARCH="$GOARCH" go build -o "$OUTPUT_NAME" main.go
+          done
+
+      - name: Calculate SHA256 checksums
+        run: |
+          cd output
+          shasum -a 256 * > checksums.txt
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: making-mirrors-binaries
+          path: output/
