feat: add new image assets for "pe de acerola" project
- Added pixel map file: pe-de-acerola-pixel-map.xcf
- Added PNG file: pe-de-acerola.png
- Added large XCF file: pe-de-acerola-grande.xcf
- Added pixel XCF file: pe-de-acerola-pixels.xcf
- Added favicon files: favicon-32x32.ico and favicon.ico
- Added static PNG file: pe-de-acerola.png

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -26,3 +26,12 @@ params:
       url: https://github.com/plnsc
     - name: gitlab
       url: https://gitlab.com/plnsc
+
+  assets:
+    favicon: /favicon.ico
+    favicon16x16: /favicon.ico
+    favicon32x32: /favicon-32x32.ico
+
+  label:
+    icon: /favicon-32x32.ico
+    iconHeight: 32
