fix: update label icon path to use "pe de acerola" image

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -33,5 +33,5 @@ params:
     favicon32x32: /favicon-32x32.ico
 
   label:
-    icon: /favicon-32x32.ico
+    icon: /pe-de-acerola.png
     iconHeight: 32
