--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: https://taboza.dev
 languageCode: pt-BR
-title: taboza.dev
+title: Blog de Paulo
 theme: ["PaperMod"]
 
 enableRobotsTXT: true
